Jetty Core APIs review and javadocs.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>