@@ -14,14 +14,12 @@
 package org.eclipse.jetty.core.server;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
+import org.eclipse.jetty.core.server.handler.ErrorProcessor;
 import org.eclipse.jetty.util.Callback;
 import org.eclipse.jetty.util.annotation.ManagedAttribute;
 import org.eclipse.jetty.util.annotation.ManagedObject;
-import org.eclipse.jetty.util.annotation.ManagedOperation;
 import org.eclipse.jetty.util.component.ContainerLifeCycle;
 import org.eclipse.jetty.util.component.Destroyable;
 import org.eclipse.jetty.util.component.LifeCycle;
@@ -30,85 +28,147 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * A Jetty HTTP Request Handler.
- * <p>
- * Incoming requests to the Server (itself a Handler) are passed to one or more Handlers
- * until the request is handled and a response is produced.  Handlers are asynchronous,
- * so handling may happen during or after a call to {@link #handle(Request)}.
+ * <p>A Jetty component that handles HTTP requests, of any version (HTTP/1.1, HTTP/2 or HTTP/3).</p>
+ * <p>{@code Handler}s are organized in a tree structure.</p>
+ * <p>An incoming HTTP request is first delivered to the {@link Server} instance
+ * (itself the root {@code Handler}), which forwards it to one or more children {@code Handler}s,
+ * which may recursively forward it to their children {@code Handler}s, until one of them
+ * returns a non-null {@link Request.Processor}.</p>
+ * <p>Returning a non-null {@code Request.Processor} indicates that the {@code Handler}
+ * wants to process the HTTP request, and subsequent sibling or children {@code Handler}s
+ * are not invoked.</p>
+ * <p>If none of the {@code Handler}s returns a {@code Request.Processor}, a default HTTP 404
+ * response is generated.</p>
+ * <p>{@code Handler}s may wrap the {@link Request} and then forward the wrapped instance
+ * to their children, so that they see modified HTTP headers or a modified HTTP URI,
+ * or to intercept the read of the request content.</p>
+ * <p>Similarly, {@code Handler}s may wrap the {@link Request.Processor} returned by one
+ * of the descendants.</p>
+ * <p>A minimal tree structure could be:</p>
+ * <pre>
+ * Server
+ * `- YourCustomHandler
+ * </pre>
+ * <p>A more sophisticated tree structure:</p>
+ * <pre>
+ * Server
+ * `- DelayedHandler.UntilContent
+ *    `- GzipHandler
+ *       `- ContextHandlerCollection
+ *          +- ContextHandler (contextPath="/user")
+ *          |  `- YourUserHandler
+ *          |- ContextHandler (contextPath="/admin")
+ *          |  `- YourAdminHandler
+ *          `- DefaultHandler
+ * </pre>
  *
+ * @see Request.Processor
  */
 @ManagedObject("Handler")
 public interface Handler extends LifeCycle, Destroyable, Invocable
 {
     /**
-     * Handle an HTTP request by providing a {@link Request.Processor}.
-     * @param request The immutable request, which is also a {@link Callback} used to signal success or failure. The Handler
-     * or one of it's nested Handlers must return a  {@link Request.Processor} to indicate that it will ultimately succeed or
-     * fail the {@link Callback} returned.
+     * <p>Invoked to decide whether to handle the given HTTP request.</p>
+     * <p>If the HTTP request can be handled by this {@code Handler},
+     * this method must return a non-null {@link Request.Processor}.</p>
+     * <p>Otherwise, the HTTP request is not handled by this {@code Handler}
+     * (for example, the HTTP request's URI does not match those handled
+     * by this {@code Handler}), and this method must return {@code null}.</p>
+     * <p>This method may inspect the HTTP request with the following rules:</p>
+     * <ul>
+     * <li>it may access read-only fields such as the HTTP headers, or the HTTP URI, etc.</li>
+     * <li>it may wrap the {@link Request} in a {@link Request.Wrapper}, for example
+     * to modify HTTP headers or modify the HTTP URI, etc.</li>
+     * <li>it may directly modify {@link Request#getAttribute(String) request attributes}</li>
+     * <li>it may directly add/remove request listeners supported in the {@link Request} APIs</li>
+     * <li>it must <em>not</em> read the request content (otherwise an {@link IllegalStateException}
+     * will be thrown)</li>
+     * </ul>
+     * <p>Exceptions thrown by this method are processed by an {@link ErrorProcessor},
+     * if present, otherwise a default HTTP 500 error is generated.</p>
      *
+     * @param request the incoming HTTP request to analyze
+     * @return a non-null {@link Request.Processor} that processes the request/response,
+     * or null if this {@code Handler} does not handle the request
      * @throws Exception Thrown if there is a problem handling.
-     * @return A Processor to handler the request or null if the request is not accepted.
      */
     Request.Processor handle(Request request) throws Exception;
 
-    @ManagedAttribute(value = "the jetty server for this handler", readonly = true)
+    /**
+     * @return the {@code Server} associated with this {@code Handler}
+     */
+    @ManagedAttribute(value = "the Server instance associated to this Handler", readonly = true)
     Server getServer();
 
+    /**
+     * @param server the {@code Server} to associate to this {@code Handler}
+     */
     void setServer(Server server);
 
-    @ManagedOperation(value = "destroy associated resources", impact = "ACTION")
     @Override
     void destroy();
 
-    static <T extends Handler.Container> T findContainerOf(Handler.Container root, Class<T> type, Handler handler)
-    {
-        if (root == null || handler == null)
-            return null;
-
-        for (T container :  root.getChildHandlersByClass(type))
-        {
-            if (container.getChildHandlersByClass(handler.getClass()).contains(handler))
-                return container;
-        }
-        return null;
-    }
-
     /**
-     * A Handler that contains one or more other handlers
+     * <p>A {@code Handler} that contains one or more other {@code Handler}s.
      */
     interface Container extends Handler
     {
         /**
-         * @return immutable collection of handlers directly contained by this handler.
+         * @return an immutable collection of {@code Handler}s directly contained by this {@code Handler}.
          */
-        @ManagedAttribute("handlers in this container")
+        @ManagedAttribute("The direct children Handlers of this container")
         List<Handler> getHandlers();
 
         /**
-         * @param byclass the child handler class to get
-         * @return collection of all handlers contained by this handler and it's children of the passed type.
+         * @return an immutable collection of {@code Handler}s descendants of this {@code Handler}.
          */
-        <T extends Handler> List<T> getChildHandlersByClass(Class<T> byclass);
-
-        default List<Handler> getChildHandlers()
+        default List<Handler> getDescendants()
         {
-            return getChildHandlersByClass(Handler.class);
+            return getDescendantsByClass(Handler.class);
         }
 
         /**
-         * @param byclass the child handler class to get
-         * @param <T> the type of handler
-         * @return first handler of all handlers contained by this handler and it's children of the passed type.
+         * @param type the type of {@code Handler}
+         * @param <T> the type of {@code Handler}
+         * @return an immutable collection of {@code Handler}s of the given type, descendants of this {@code Handler}
          */
-        <T extends Handler> T getChildHandlerByClass(Class<T> byclass);
+        <T extends Handler> List<T> getDescendantsByClass(Class<T> type);
+
+        /**
+         * @param type the type of {@code Handler}
+         * @param <T> the type of {@code Handler}
+         * @return the first {@code Handler} of the given type, descendants of this {@code Handler},
+         * or null if no such {@code Handler} exist
+         */
+        <T extends Handler> T getDescendantByClass(Class<T> type);
+
+        /**
+         * @param handler the child {@code Handler}
+         * @param type the type of {@code Handler}
+         * @param <T> the type of {@code Handler}
+         * @return the {@code Handler.Container} of the given type, parent of the given {@code Handler}
+         */
+        default <T extends Handler.Container> T getContainerByClass(Handler handler, Class<T> type)
+        {
+            if (handler == null)
+                return null;
+
+            for (T container : getDescendantsByClass(type))
+            {
+                if (container.getDescendantsByClass(handler.getClass()).contains(handler))
+                    return container;
+            }
+            return null;
+        }
     }
 
     /**
-     * An Abstract Handler that is a {@link ContainerLifeCycle}
+     * <p>An abstract implementation of {@link Handler} that is a {@link ContainerLifeCycle}.</p>
      */
     abstract class Abstract extends ContainerLifeCycle implements Handler
     {
         private static final Logger LOG = LoggerFactory.getLogger(Abstract.class);
+
         private Server _server;
 
         @Override
@@ -155,51 +215,51 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
     }
 
     /**
-     * An abstract implementation of a Handler that container one or more other Handlers
+     * <p>A {@link Handler.Abstract} that implements {@link Handler.Container}.</p>
      */
     abstract class AbstractContainer extends Abstract implements Container
     {
         @Override
-        public <T extends Handler> List<T> getChildHandlersByClass(Class<T> byclass)
+        public <T extends Handler> List<T> getDescendantsByClass(Class<T> type)
         {
             List<T> list = new ArrayList<>();
-            expandHandler(this, list, byclass);
+            expandHandler(this, list, type);
             return list;
         }
 
         @SuppressWarnings("unchecked")
-        protected <H extends Handler> void expandHandler(Handler handler, List<H> list, Class<H> byClass)
+        private <H extends Handler> void expandHandler(Handler handler, List<H> list, Class<H> type)
         {
-            if (!(handler instanceof Container))
+            if (!(handler instanceof Container container))
                 return;
 
-            for (Handler h : ((Container)handler).getHandlers())
+            for (Handler child : container.getHandlers())
             {
-                if (byClass == null || byClass.isInstance(h))
-                    list.add((H)h);
-                expandHandler(h, list, byClass);
+                if (type == null || type.isInstance(child))
+                    list.add((H)child);
+                expandHandler(child, list, type);
             }
         }
 
         @Override
-        public <T extends Handler> T getChildHandlerByClass(Class<T> byclass)
+        public <T extends Handler> T getDescendantByClass(Class<T> type)
         {
-            return findHandler(this, byclass);
+            return findHandler(this, type);
         }
 
         @SuppressWarnings("unchecked")
-        protected <H extends Handler> H findHandler(Handler handler, Class<H> byClass)
+        private <H extends Handler> H findHandler(Handler handler, Class<H> type)
         {
-            if (!(handler instanceof Container))
+            if (!(handler instanceof Container container))
                 return null;
 
-            for (Handler h : ((Container)handler).getHandlers())
+            for (Handler child : container.getHandlers())
             {
-                if (byClass == null || byClass.isInstance(h))
-                    return ((H)h);
-                H c = findHandler(h, byClass);
-                if (c != null)
-                    return c;
+                if (type == null || type.isInstance(child))
+                    return (H)child;
+                H descendant = findHandler(child, type);
+                if (descendant != null)
+                    return descendant;
             }
             return null;
         }
@@ -208,9 +268,9 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
         public void setServer(Server server)
         {
             super.setServer(server);
-            for (Handler h : getHandlers())
+            for (Handler child : getHandlers())
             {
-                h.setServer(server);
+                child.setServer(server);
             }
         }
 
@@ -218,22 +278,17 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
         public InvocationType getInvocationType()
         {
             InvocationType invocationType = InvocationType.NON_BLOCKING;
-            for (Handler h : getHandlers())
-                invocationType = Invocable.combine(invocationType, h.getInvocationType());
+            for (Handler child : getHandlers())
+                invocationType = Invocable.combine(invocationType, child.getInvocationType());
             return invocationType;
         }
     }
 
     /**
-     * A Handler Container that wraps a single other Handler
+     * <p>A {@link Handler.Container} that wraps a single other {@code Handler}.</p>
      */
     class Wrapper extends AbstractContainer
     {
-        public static Request.Processor wrapProcessor(Request.Processor processor, Request request)
-        {
-            return processor == null ? null : (ignored, response, callback) -> processor.process(request, response, callback);
-        }
-
         private Handler _handler;
 
         public Handler getHandler()
@@ -248,9 +303,9 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
                 server.getInvocationType() != Invocable.combine(server.getInvocationType(), handler.getInvocationType()))
                 throw new IllegalArgumentException("Cannot change invocation type of started server");
 
-            // check for loops
-            if (handler == this || (handler instanceof Handler.Container &&
-                ((Handler.Container)handler).getChildHandlers().contains(this)))
+            // Check for loops.
+            if (handler == this || (handler instanceof Handler.Container container &&
+                container.getDescendants().contains(this)))
                 throw new IllegalStateException("setHandler loop");
 
             if (handler != null)
@@ -278,17 +333,19 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
         @Override
         public List<Handler> getHandlers()
         {
-            if (_handler == null)
-                return Collections.emptyList();
-            return Collections.singletonList(_handler);
+            Handler next = getHandler();
+            if (next == null)
+                return List.of();
+            return List.of(next);
         }
 
         @Override
         public void setServer(Server server)
         {
             super.setServer(server);
-            if (_handler != null)
-                _handler.setServer(getServer());
+            Handler next = getHandler();
+            if (next != null)
+                next.setServer(getServer());
         }
 
         @Override
@@ -307,8 +364,7 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
     }
 
     /**
-     * A Handler Container that wraps a list of other Handlers.
-     * By default, each handler is called in turn until one returns true from {@link Handler#handle(Request)}.
+     * <p>A {@link Handler.Container} that contains a list of other {@code Handler}s.</p>
      */
     class Collection extends AbstractContainer
     {
@@ -316,8 +372,7 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
 
         public Collection(Handler... handlers)
         {
-            if (handlers.length > 0)
-                setHandlers(handlers);
+            this(List.of(handlers));
         }
 
         public Collection(List<Handler> handlers)
@@ -345,14 +400,7 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
 
         public void setHandlers(Handler... handlers)
         {
-            setHandlers(handlers.length == 0 ? null : Arrays.asList(handlers));
-        }
-
-        protected List<Handler> newHandlers(List<Handler> handlers)
-        {
-            return handlers == null
-                ? Collections.emptyList()
-                : Collections.unmodifiableList(new ArrayList<>(handlers));
+            setHandlers(handlers.length == 0 ? null : List.of(handlers));
         }
 
         public void setHandlers(List<Handler> handlers)
@@ -362,14 +410,14 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
             Server server = getServer();
             InvocationType invocationType = server == null ? null : server.getInvocationType();
 
-            // check for loops && Invocation type change
+            // Check for loops && InvocationType changes.
             for (Handler handler : newHandlers)
             {
                 if (handler == null)
                     continue;
 
-                if (handler == this || (handler instanceof Handler.Container &&
-                    ((Handler.Container)handler).getChildHandlers().contains(this)))
+                if (handler == this || (handler instanceof Handler.Container container &&
+                    container.getDescendants().contains(this)))
                     throw new IllegalStateException("setHandler loop");
                 invocationType = Invocable.combine(invocationType, handler.getInvocationType());
                 if (server != null && server.isStarted() &&
@@ -380,7 +428,13 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
             }
 
             updateBeans(_handlers, handlers);
+
             _handlers = newHandlers;
+        }
+
+        protected List<Handler> newHandlers(List<Handler> handlers)
+        {
+            return handlers == null ? List.of() : List.copyOf(handlers);
         }
 
         public void addHandler(Handler handler)
@@ -398,6 +452,11 @@ public interface Handler extends LifeCycle, Destroyable, Invocable
         }
     }
 
+    /**
+     * <p>A {@link Handler.Abstract} that implements {@link Request.Processor},
+     * therefore handling any {@link Request} so that subclasses only need to
+     * implement {@link #process(Request, Response, Callback)}.</p>
+     */
     abstract class Processor extends Abstract implements Request.Processor
     {
         private final InvocationType _type;
